EFCore api/GetBuildings ready.

--- a/QGISEFApi/appsettings.json
+++ b/QGISEFApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QGISEFCoreApiContext": "Data Source = DESKTOP-PMP9UHE; Initial catalog=Project; Integrated Security=true; TrustServerCertificate=True"
+    "QGISEFApiContext": "Data Source = DESKTOP-PMP9UHE; Initial catalog=Project; Integrated Security=true;TrustServerCertificate=True"
   }
 }
