Refactoring. Fixed Create page in QGISWAA. TODO: Fix QGISDDC.(string => Geometry).

--- a/QGISBlazorWebAssemblyApplication/Properties/launchSettings.json
+++ b/QGISBlazorWebAssemblyApplication/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "QGISProject": {
+    "QGISBlazorWebAssemblyApplication": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
