--- a/QGISDirectDbConnection/Properties/launchSettings.json
+++ b/QGISDirectDbConnection/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "QGISDataApi": {
+    "QGISDirectDatabaseConnectionApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
