--- a/QGISDirectDbConnection/appsettings.json
+++ b/QGISDirectDbConnection/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default" : "DESKTOP-PMP9UHE; Initial catalog=Project; Integrated Security=true"
+    "DefaultConnection": "Data Source = DESKTOP-PMP9UHE; Initial catalog=Project; Integrated Security=true"
   }
 }
